<resources>
    <string name="app_name">mousic</string>
    <string name="intervals">Интервалы</string>
    <string name="chords">Аккорды</string>
    <string name="modes">Лады</string>
    <string name="rhythm">Ритм</string>
    <string name="standart_intervals">Стандартные</string>
    <string name="tritons">Тритоны</string>
    <string name="special_intervals">Характерные</string>
    <string name="standart_trio">Стандартные трезвучия</string>
    <string name="side_trio">Побочные трезвучия</string>
    <string name="D7">Доминантсептаккорд</string>
    <string name="sept_chords">Септаккорд</string>
    <string name="angemiton">Бесполутоновые</string>
    <string name="diatonic">Диатонические</string>
    <string name="cond_diatonic">Условно диатонические</string>
    <string name="false_modes">Искуственные</string>
    <string name="rhythm_div">Ритмические деления</string>
    <string name="time_signature">Размер</string>
    <string name="metre">Метр</string>
    <string name="rhythm_pattern">Ритмический рисунок</string>
    <string name="next">Далее</string>
    <string name="previous">Назад</string>
    <string name="intName0">Общая информация</string>
    <string name="interval0">
        \t\t <b>Музыкальный интервал</b> – это <u> определение </u> соотношения звуков разной высоты.
        \n \t\t Интервалы по воспроизведению бывают мелодическими и гармоническими.
        \n \t\t	Мелодический интервал – игра двух нот последовательно, гармонический – игра двух нот одновременно. Первый вид используется для создания мелодии, которая является последовательным соединением интервалов. На втором виде основывается музыкальная гармония.
        \n
        \n \t\t
        \n \t\t	Роль интервалов в музыке
        \n \t\t
        \n \t\t	Они используются для построения мелодии и придания ей выразительности. Благодаря интервалам происходит энгармоническая замена одного или обоих звуков. Соединение метроритма и интервала образует интонацию. Полутоновые или тоновые интервалы небольшие, поэтому при их объединении формируются лады. Из широких интервалов образуются аккорды.
        \n \t\t	Так благодаря интервалам становится понятным качество аккорда: мажорное, минорное, увеличенное или уменьшенное.
        \n
        \n \t\t
        \n \t\t	Свойства интервалов
        \n \t\t
        \n \t\t	Музыкальные интервалы делятся на 2 основные группы:
        \n	Консонансы – интервалы со слаженным и гармоничным звучанием.
        \n	Диссонансы – интервалы с резким звучанием, в которых звуки не согласуются друг с другом.
        \n
        \n \t\t	Консонансы делятся на три группы:
        \n	совершенные – чистые квинта и кварта;
        \n	несовершенные – большие, малые терции и сексты.
        \n	абсолютные – чистые прима и октава.
        \n
        \n \t\t	К диссонансам принадлежат:
        \n	секунды;
        \n	септимы.
        </string>
    <string name="intName00">Общая информация</string>
    <string name="interval00">
        Музыкальный интервал – это определение соотношения звуков разной высоты.
        Интервалы по воспроизведению бывают мелодическими и гармоническими.
        Мелодический интервал – игра двух нот последовательно,
    </string>
    <string name="intName1">Прима</string>
    <string name="interval1">
        \t\t Интервал примы является самым простым для понимания. Это просто одна и та же нота. Таким образом, тоновая величина примы равна 0, а соотношение звуков равно 1:1. Естественно, что прима является совершенным консонансом.
        \n \t\t
        \n \t\t В гармонии примой также называют основной тон аккорда. Например, в аккорде C прима нота C. В аккорде Am прима нота A и т.д.
        \n \t\t
        \n \t\t Как и любой интервал в музыке прима бывает мелодической и гармонической. Мелодическая прима является основой речитативной мелодики и очень часто используется в современных мелодиях и риффах. Использование примы в мелодии помогает акцентировать внимание слушателя на смысле текста песни или на ритмике мелодии, а не на интонационном развитии звука.
        \n \t\t На фортепиано получить гармоническую приму невозможно, а на струнных инструментах прима может быть исполнена на соседних струнах. Так, например, настраивается гитара
        \n \t\t Гармоническая прима также называется унисоном и играет важную роль в аранжировке и инструментовке, так как проведение линии в унисон это простейший способ получения нового тембра, а также простой прием усиления динамики.
        \n \t\t
        \n \t\t Исполнение одной партии в оркестре или ансамбле группой инструментов называют игрой в унисон или пением в унисон.
        \n \t\t В современной музыке наиболее часто используется унисон 2х и более гитар, а также унисонные усиления фраз вокальной линии.
        \n \t\t Несмотря на то, что при исполнении гармонической примы мы слышим один звук, восприятие интервала меняется в зависимости от тембра инструментов и голоса, так как разные инструменты имеют разные гармоники и форму волны, что насыщает звучание ноты и делает ее звучание более выпуклым в контексте аранжировки.
        \n \t\t
        \n \t\t Обращением примы является октава. Прима может быть увеличена, но не может уменьшена, так как уменьшать ее некуда.
        \n \t\t Увеличенная прима может возникать только при использовании хроматики или при сочетании нескольких ладов (полиладовость). Однако любые вариации увеличенных или дважды увеличенных прим являются редкостью и не имеют большого значения в практике современной музыки
        \n \t\t В синтезе термин унисон используется для описания двух или более осцилляторов, которые слегка расстроены в соответствии друг с другом, что делает звук более плотным и насыщенным. Этот метод настолько популярен, что некоторые современные виртуальные аналоговые синтезаторы имеют специальный тип генератора, называемый «super saw» или «hyper saw», который генерирует несколько расстроенных пилообразных волн одновременно.
</string>
    <string name="intName2">Секунда</string>
    <string name="interval2">
        \t\t Секунда (переводится как вторая) — второй по счету интервал, который делится на два вида малая и большая и является ярко выраженным диссонансом.
        \n \t\t Ступеневая величина секунды равна 1 шагу, тоновая величина соответственно равна полутон для малой секунды и целый тон для большой. Обозначается секунда как 2 (м2 или б2 соответственно)
        \n \t\t
        \n \t\t
        \n \t\t Малая секунда
        \n \t\t
        \n \t\t Минимальное расстояние между нотами в темперированном строе это полутон, который дает нам малую секунду.
        \n \t\t В диатонике малая секунда возникает между 3 и 4 и 7 и 1 ступенями лада. Это те самые две белые клавиши подряд на клавиатуре фортепиано. Гармонические малые секунды в нотной записи
        \n \t\t
        \n \t\t Гармонически малая секунда является самым острым диссонансом из всех интервалов и, пожалуй, больше ни одно сочетание звуков так сильно не режет уши, как соседство двух нот на расстоянии полутона.
        \n \t\t
        \n \t\t В мелодическом же движении малая секунда является ключевым интервалом для создания тяготения ступеней. Именно тяготение 7 ступени в 1 предопределило закрепление ионийского лада в качестве главного лада тональной системы — мажор.
        \n \t\t Полутоновое тяготение является основой мелодической совершенной каденции при разрешении 7 ступени в тонику, а также движение 7 — 1 гармонизуется прерванной каденцией V-VI.
        \n \t\t Полутоновое тяготение 4 ступени в 3 создает плагальную каденцию. То есть формирование системы функции в гармонии есть не что иное, как влияние полутонового мелодического тяготения на гармонию.
        \n \t\t
        \n \t\t
        \n \t\t Большая секунда
        \n \t\t
        \n \t\t Как и все большие интервалы, большая секунда строится на первой ступени мажорного лада. Мы можем ее получить двигаясь по белым клавишам фортепиано от ноты C. Двигаясь через один лад на гитаре.
        \n \t\t
        \n \t\t Гармоническая большая секунда также является диссонансом.
        \n \t\t
        \n \t\t Характерно, что большая секунда входит в состав натурального звукоряда и находится между 8 и 9 обертонами. В то время, как малая секунда только под 17 обертоном.
        \n \t\t В мелодическом движении большая секунда является основной плавного, пошагового движения.
        \n \t\t Все же остальные интервалы шире секунды обычно уже рассматриваются как скачки.
        \n \t\t
        \n \t\t Это также один из самых удобных интервалов для пения. Поэтому движение по секундам составляет основу любой мелодии.
        \n \t\t
        \n \t\t Так как тоновая величина малой секунды целый тон, а ступеневая одна ступень, то чтобы построить ее вам нужно вначале выписать соседние ноты, а затем внести нужные коррективы.
        \n \t\t Например, BC — ступеневое расстояние одна ступень, тоновая величина полтона, то есть малая секунда. Для того, чтобы получить большую секунду, нам нужно без изменения названия нот увеличить расстояние между ними. Для этого повышаем вторую ноту и получаем большую секунду BC#
    </string>
    <string name="intName3">Терция</string>
    <string name="interval3">
        \t\t Терция (переводится как третья) — интервал равный 3 ступеням и имеющий две разновидности малую и большую, поэтому терции являются несовершенными консонансами.
        \n \t\t
        \n \t\t Малая терция (м3) равна расстоянию в три полутона или 1, 5 тона. В нотной записи звуки терции всегда находятся на равнозначных позициях нотного стана. То есть если основание записано на линейке, то вершина будет также на линейке, если основание между линеек, то и вершина между линеек:
        \n \t\t
        \n \t\t
        \n \t\t Малая терция
        \n \t\t
        \n \t\t Другое название для малой терции — минорная терция, так как она является основой и отличительной чертой минорного трезвучия. Малая терция звучит грустно, печально. Мелодически терции рассматриваются, как переходные интервалы между поступенным движением и скачками.
        \n \t\t Минорная терция является естественным интервалом, так как легко получается из натурального звукоряда, где она образуется между 5 и 6 обертонами.
        \n \t\t В тональной музыке мы можем построить минорные терции на 1, 4, 5 ступенях натурального минора:
        \n \t\t
        \n \t\t Если хотите вспомнить, как звучит малая терция то напевайте мелодию Маленькой елочке холодной зимой или Подмосковные вечера.
        \n \t\t
        \n \t\t
        \n \t\t Большая терция
        \n \t\t
        \n \t\t Мажорная или большая терция (б3) на полутон шире малой, так для того, чтобы получить большую терцию из предыдущих малых нам нужно повысить на полтона верхний звук или понизить нижний. Большая терция строится на 1, 4,5 ступенях мажорного лада и является основой мажорного и увеличенного трезвучия.
        \n \t\t Большая терция звучит радостно, светло, как в гармонии, так и в мелодии.
        \n \t\t Как известно, из строения обертонового ряда большая терция это первый несовершенный консонанс, который появляется в цепочке обертонов. Что частично объясняет укрепление мажорного лада, как главного в классической музыке.

    </string>
    <string name="intName4">Кварта</string>
    <string name="quiz">ПРАКТИКА</string>
</resources>